# uci_cs222p

cs222p/: .cproject  CMakeLists.txt
cs222p/src/ix/: ix.cc  ix.h  ixtest_05.cc
cs222p/src/qe/: left.C  left3.C  qe.cc  qe.h  qe_test_util.h  qetest_u1.cc  right.C
cs222p/src/rbf/: pfm.cc  pfm.h  rbfm.cc  rbfm.h
cs222p/src/rm/: rm.cc  rm.h
