cmake_minimum_required(VERSION 3.9)
project(cs222p)

set(CMAKE_CXX_STANDARD 11)

add_executable(cs222p
        src/cli/cli.cc
        src/cli/cli.h
        src/cli/cli_example_01.cc
        src/cli/cli_example_02.cc
        src/cli/cli_example_03.cc
        src/cli/cli_example_04.cc
        src/cli/cli_example_05.cc
        src/cli/cli_example_06.cc
        src/cli/cli_example_07.cc
        src/cli/cli_example_08.cc
        src/cli/cli_example_09.cc
        src/cli/cli_example_10.cc
        src/cli/cli_example_11.cc
        src/cli/cli_example_12.cc
        src/cli/start.cc
        src/ix/ix.cc
        src/ix/ix.h
        src/ix/ix_test_util.h
        src/ix/ixtest_01.cc
        src/ix/ixtest_02.cc
        src/ix/ixtest_03.cc
        src/ix/ixtest_04.cc
        src/ix/ixtest_05.cc
        src/ix/ixtest_06.cc
        src/ix/ixtest_07.cc
        src/ix/ixtest_08.cc
        src/ix/ixtest_09.cc
        src/ix/ixtest_10.cc
        src/ix/ixtest_11.cc
        src/ix/ixtest_12.cc
        src/ix/ixtest_13.cc
        src/ix/ixtest_14.cc
        src/ix/ixtest_15.cc
        src/ix/ixtest_extra_01.cc
        src/ix/ixtest_extra_02.cc
        src/ix/ixtest_p1.cc
        src/ix/ixtest_p2.cc
        src/ix/ixtest_p3.cc
        src/ix/ixtest_p4.cc
        src/ix/ixtest_p5.cc
        src/ix/ixtest_p6.cc
        src/ix/ixtest_pe_01.cc
        src/ix/ixtest_pe_02.cc
        src/qe/left.C
        src/qe/left3.C
        src/qe/qe.cc
        src/qe/qe.h
        src/qe/qe_test_util.h
        src/qe/qetest_01.cc
        src/qe/qetest_02.cc
        src/qe/qetest_03.cc
        src/qe/qetest_04.cc
        src/qe/qetest_05.cc
        src/qe/qetest_06.cc
        src/qe/qetest_07.cc
        src/qe/qetest_08.cc
        src/qe/qetest_09.cc
        src/qe/qetest_10.cc
        src/qe/qetest_11.cc
        src/qe/qetest_12.cc
        src/qe/qetest_13.cc
        src/qe/qetest_14.cc
        src/qe/qetest_15.cc
        src/qe/qetest_16.cc
        src/qe/qetest_p00.cc
        src/qe/qetest_p01.cc
        src/qe/qetest_p02.cc
        src/qe/qetest_p03.cc
        src/qe/qetest_p04.cc
        src/qe/qetest_p05.cc
        src/qe/qetest_p06.cc
        src/qe/qetest_p07.cc
        src/qe/qetest_p08.cc
        src/qe/qetest_p09.cc
        src/qe/qetest_p10.cc
        src/qe/qetest_p11.cc
        src/qe/qetest_p12.cc
        src/qe/qetest_u1.cc
        src/qe/right.C
        src/rbf/pfm.cc
        src/rbf/pfm.h
        src/rbf/rbfm.cc
        src/rbf/rbfm.h
        src/rbf/rbftest1.cc
        src/rbf/rbftest10.cc
        src/rbf/rbftest11.cc
        src/rbf/rbftest12.cc
        src/rbf/rbftest2.cc
        src/rbf/rbftest3.cc
        src/rbf/rbftest4.cc
        src/rbf/rbftest5.cc
        src/rbf/rbftest6.cc
        src/rbf/rbftest7.cc
        src/rbf/rbftest8.cc
        src/rbf/rbftest8b.cc
        src/rbf/rbftest9.cc
        src/rbf/test_util.h
        src/rm/rm.cc
        src/rm/rm.h
        src/rm/rm_test_util.h
        src/rm/rmtest_00.cc
        src/rm/rmtest_01.cc
        src/rm/rmtest_02.cc
        src/rm/rmtest_03.cc
        src/rm/rmtest_04.cc
        src/rm/rmtest_05.cc
        src/rm/rmtest_06.cc
        src/rm/rmtest_07.cc
        src/rm/rmtest_08.cc
        src/rm/rmtest_09.cc
        src/rm/rmtest_10.cc
        src/rm/rmtest_11.cc
        src/rm/rmtest_12.cc
        src/rm/rmtest_13.cc
        src/rm/rmtest_13b.cc
        src/rm/rmtest_14.cc
        src/rm/rmtest_15.cc
        src/rm/rmtest_create_tables.cc
        src/rm/rmtest_delete_tables.cc
        src/rm/rmtest_extra_1.cc
        src/rm/rmtest_extra_2.cc
        src/shared.h)
